fix: light/dark mode issues in report history

--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -3,7 +3,7 @@
 * {
   font-family: 'Quicksand', serif;
   font-optical-sizing: auto;
-  font-weight: 600;
+  font-weight: 700;
   font-style: normal;
 }
 
